--- a/frontend/Login.html
+++ b/frontend/Login.html
@@ -185,7 +185,7 @@
     <!-- Login form card -->
     <form id="login-form" class="login-card">
       <div class="top-logo">
-        <img class="logo" src="assets/Logo.png" />
+        <img class="logo" src="https://raw.githubusercontent.com/luthandodake10111/iliso--frontend-images-/main/LC%20logo.png" />
         <h2 class="title">Log in</h2>
       </div>
       <p class="subtitle">Youth is 37% of South Africa, but 100% of its future</p>
