fixed routes in frontend

--- a/frontend/ResetPassword.html
+++ b/frontend/ResetPassword.html
@@ -186,7 +186,7 @@
         }
         try {
           // Replace with your real backend endpoint
-          const response = await fetch("https://your-backend-api.com/reset-password", {
+          const response = await fetch('http://127.0.0.1/xneelo-iliso/backend/request_password_reset.php', {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
